 * Removed deprecated SubsetSampling.getNumberOfSteps
 * coupling_tools.execute: deprecated get_stderr,get_stdout for capture_output, returns CompletedProcess
 * Deprecated Nlopt|Ceres|Bonmin|CMinpack|Ipopt|TBB|HMatrixFactory::IsAvailable in favor of PlatformInfo::HasFeature, see also GetFeatures

=== Documentation ===

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===


== 1.18 release (2021-11-10) == #release-1.18

=== Library ===

==== Major changes ====

==== New classes ====
 * DistanceToDomainFunction

==== API changes ====
 * Removed deprecated MultiStart::setStartingPoints/getStartingPoints
 * Removed deprecated KarhunenLoeveResult::getEigenValues
 * Removed deprecated coupling_tools.execute is_shell/workdir/shell_exe/check_exit_code arguments
 * RandomVector::get/setParameter and getParameterDescription available to PythonRandomVector
 * Implemented CovarianceModel::computeCrossCovariance
 * Deprecated Hanning in favor of Hann
 * Deprecated AdaptiveDirectionalSampling in favor of AdaptiveDirectionalStratification
 * Deprecated VisualTest::DrawCobWeb in favor of DrawParallelCoordinates
 * IndicatorFunction constructor takes a Domain as input
 * Intervals and DomainUnions get new method computeDistanceToDomain(Point or Sample)
 * Renamed some ResourceMap keys: cache-max-size>Cache-MaxSize, parallel-threads>TBB-ThreadsNumber
 * Deprecated TBB.SetNumberOfThreads/GetNumberOfThreads
 * Deprecated MultiFORM.setMaximumNumberOfDesignPoints/getMaximumNumberOfDesignPoints
 * Deprecated SubsetSampling.getNumberOfSteps
 * Normal and Student distributions: no need to specify the R parameter if it is the identity matrix
 * KrigingResult::getConditionalMean and getConditionalMarginalVariance yield Samples instead of Points when applied to Samples
 * Deprecated shims module

=== Documentation ===

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #1840 (HMatrixFactory leaks)
 * #1842 (libOT.so.0.0.0 doesn't have a SONAME)